add option for trace end timestamp, to stop tracing messages in the partition once a message with a higher message-timestamp is consumed